# similar-comp-search

backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: competitions.py  solutions.py
backend/app/services/: similarity.py
backend/tests/: conftest.py  test_competitions.py  test_solutions.py
docs/: design_doc.md  prompt.md
frontend/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.setup.ts
frontend/e2e/: search.spec.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: CompetitionDetail.tsx  Footer.tsx  Header.tsx  Home.tsx  NotFound.tsx  Pagination.tsx  SearchBar.tsx  SearchResults.tsx  SolutionDetail.tsx  ThemeToggle.tsx  ToggleSwitch.tsx
frontend/src/components/Footer/: Footer.tsx  FooterLinks.tsx
frontend/src/hooks/: useCompetitionDetail.ts  useSearch.ts  useSolutionDetail.ts  useToggleSwitch.ts
frontend/src/pages/: CompetitionDetail.tsx  Home.tsx  NotFound.tsx  SolutionDetail.tsx
frontend/src/utils/: apiClient.ts
frontend/tests/: App.test.tsx  setupTests.ts
frontend/tests/components/: CompetitionDetail.test.tsx  Footer.test.tsx  Header.test.tsx  Home.test.tsx  NotFound.test.tsx  Pagination.test.tsx  SearchBar.test.tsx  SearchResults.test.tsx  SolutionDetail.test.tsx  ThemeToggle.test.tsx  ToggleSwitch.test.tsx
frontend/tests/hooks/: useCompetitionDetail.test.ts  useSearch.test.ts  useSolutionDetail.test.ts  useToggleSwitch.test.ts
frontend/tests/pages/: CompetitionDetail.test.tsx  Home.test.tsx  NotFound.test.tsx  SolutionDetail.test.tsx
(+8 files in other folders)
